--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
 body {
     background-color: lightgreen;
 }
+.user {
+    margin-left: 10px;
+}
+.password {
+    margin-left: 50px;
+}
+.user, .password {
+    background-color: lightgray;
+}
