--- a/views/logged.pug
+++ b/views/logged.pug
@@ -1,6 +1,6 @@
 html
     head
-        title Szablony HTML
+        title Uwierzytelnianie
     <style type="text/css">
         include ../css/style.css
     </style>
