--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,32 @@
-body {
-    background-color: lightgreen;
+body{
+    font-family: arial;
+    margin: 0;
 }
-.user {
-    margin-left: 10px;
+nav{
+    background: #ff5353;
+    padding: 20px 10px;
 }
-.password {
-    margin-left: 50px;
+nav ul{
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 0;
 }
-.user, .password {
-    background-color: lightgray;
+nav li{
+    list-style-type: none;
+    display: inline-block;
+    margin: 0 10px 0 0;
+}
+nav a{
+    color: #fff;
+    font-size: 18px;
+    background: rgba(255,255,255,0.2);
+    text-decoration: none;
+    padding: 10px;
+    display: block;
+}
+main, header{
+    max-width: 960px;
+    margin: 30px auto;
+    padding: 0 10px;
+    color: #333;
 }
