--- a/views/logged.pug
+++ b/views/logged.pug
@@ -1,8 +1,14 @@
 html
     head
-        title Uwierzytelnianie
+        title OAuth Google
     <style type="text/css">
         include ../css/style.css
     </style>
+
     body
-        h3 Witaj na stronie
+      nav
+        ul
+          li
+            a(href='/') Homepage
+      header
+        h2 You successfully logged in.
