--- a/views/logged.pug
+++ b/views/logged.pug
@@ -11,4 +11,4 @@ html
           li
             a(href='/') Homepage
       header
-        h2 You successfully logged in.
+        h2 You have successfully logged in.
